syntax = "proto3";
package lastmile.trip;
option java_package = "lastmile.trip";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (Trip);
  rpc UpdateTripStatus(UpdateTripRequest) returns (Trip);
  rpc GetTrip(TripId) returns (Trip);
}

message CreateTripRequest {
  string driver_id = 1;
  string route_id = 2;
  string station_area_id = 3;
  repeated string rider_ids = 4;
  string destination_area_id = 5;
  google.protobuf.Timestamp scheduled_departure = 6;
}

message Trip {
  string trip_id = 1;
  string driver_id = 2;
  string route_id = 3;
  string station_area_id = 4;
  string destination_area_id = 5;
  repeated string rider_ids = 6;
  string status = 7;
  google.protobuf.Timestamp scheduled_departure = 8;
}

message UpdateTripRequest { string trip_id = 1; string status = 2; }
message TripId { string id = 1; }